--- a/styles.css
+++ b/styles.css
@@ -4021,6 +4021,7 @@ h6 {
     padding: 0;
     font-weight: normal;
     margin-left: 0;
+    margin-right: 4px; /* Ajouter un espace après h6 */
     font-family: inherit;
     vertical-align: baseline; /* Ajout de l'alignement vertical */
 }
